support alert and confirm box and check jira/cr format and confirm before force refresh

--- a/tbd/templates/tbd/base.html
+++ b/tbd/templates/tbd/base.html
@@ -64,4 +64,9 @@
         
         {% block user_js %}{% endblock %}
     </body>
+    <div class="hidden">
+        <div id="dialog-confirm" title="no title">
+          <p>no content</p>
+        </div>
+    </div>
 </html>
